--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "hardhat": "^2.9.6"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "web3modal": "^1.9.7"
   }
 }
